<resources>

    <string name="app_name">TA2</string>
    <string name="action_settings">Settings</string>
    
    <!-- Generic items -->
	    <string name="generic_bt_ok">OK</string>
	    <string name="generic_bt_cancel">Cancel</string>
	    
	    <string name="generic_tv_confirm">Confirm</string>
	    <string name="generic_tv_menu">メニュー</string>
	    <string name="generic_tv_register">Register</string>
	    <string name="generic_tv_edit">Edit</string>
	    <string name="generic_tv_delete">Delete</string>
	    <string name="generic_tv_upload">Upload</string>
	    <string name="generic_tv_quit_app">Quit app?</string>
	    
	    <string name="generic_tv_play">Play</string>
	    <string name="generic_tv_view">View</string>

	    <string name="generic_tv_no_data">No data</string>
	    <string name="generic_bt_back">Back</string>
	    	    
    	<string name="generic_notice">Notice</string>
    	<string name="generic_Reset">Reset</string>
    
    <!-- commmons　-->
    	<string name="commons_import_db_name">ifm11.db</string>
    	<string name="commons_lbl_create_table">Create table</string>
    	<string name="commons_lbl_drop_table">Drop table</string>
    	<string name="commons_lbl_add_column">Add column</string>
    	<string name="commons_lbl_restore_db">Restore DB</string>
    	<string name="commons_lbl_clear_view">Clear view</string>
    	<string name="commons_lbl_word">Word</string>
    	
    	<string name="commons_lbl_rb_and">AND</string>
    	<string name="commons_lbl_rb_or">OR</string>
    	<string name="commons_lbl_rb_not">NOT</string>
    	
    	<string name="commons_lbl_rec">Rec</string>
    	<string name="commons_lbl_back">Back</string>
    	<string name="commons_lbl_stop">Stop</string>
    	
    	<string name="commons_lbl_edit_memo">Edit memo</string>
    
    	<string name="commons_lbl_copy_to_clipboard">Copy to clipboard</string>
    
    <!-- labels for templates -->
	    <string name="dlg_tmpl_confirm_simple_msg_delete_file">
       									Delete file, too</string>
    	
    
    <!-- UI labels -->
    	<string name="btn_lbl_time_line">Timeline</string>
    	<string name="btn_lbl_memo_patterns">Patterns</string>

    <!-- Menu: main -->
    	<string name="menu_main_logout">Logout</string>
    	<string name="menu_main_query">Query</string>
    	<string name="menu_main_timeline">Timeline</string>
    	<string name="menu_main_tweet">Tweet</string>
    	<string name="menu_main_refresh_screen">Refresh screen</string>
    	<string name="menu_main_admin">Admin</string>
    	<string name="menu_main_horizontal_listview">Horizontal LV</string>
    	
    	<string name="menu_main_Start_ImportActv">Import Actv</string>

    <!-- Menu: showlist -->
    	<string name="menu_showlist_filter">Filter</string>
    	<string name="menu_showlist_filter_history">Filter history</string>
    			
    <!-- dlg_actvmain_admin.xml -->
   		<string name="dlg_actvmain_admin_title">Admin</string>
   		<string name="dlg_actvmain_admin_item_backup_db">Backup DB</string>
   		<string name="dlg_actvmain_admin_item_refresh_db">Refresh DB</string>
   		<string name="dlg_actvmain_admin_item_restore_db">Restore DB</string>
   		
   		<string name="dlg_actvmain_admin_item_upload_db">Upload DB</string>
   		
   		<string name="dlg_actvmain_admin_item_operations">Operations</string>
   		
   		<string name="dlg_actvmain_admin_item_see_log">See log</string>
   		

	<!-- dlg_actvmain_operations.xml -->
   		<string name="dlg_actvmain_ops_title">DB Admin</string>   				
   		
   		<string name="dlg_actvmain_ops_import_db">
   		    										Import DB</string>
   		    										
   		<string name="dlg_actvmain_ops_import_patterns">
   		    										Import patterns</string>
   		    										
   		<string name="dlg_actvmain_ops_drop_table_patterns">
   		    										Drop table: patterns</string>
   		<string name="dlg_actvmain_ops_create_table_patterns">
   		    							Create table: patterns</string>
    		
   		<string name="dlg_actvmain_ops_drop_table_memos">
   		    										Drop table: memos</string>
   		<string name="dlg_actvmain_ops_create_table_memos">
   		    							Create table: memos</string>
   		    							
   		<string name="dlg_actvmain_ops_Drop_Create_table_filter_history">
   		    										Drop/Create table: filter_history</string>
   		    										
   		<string name="dlg_actvmain_ops_Drop_Create_Table_FilterHistory_ShowLog">
 		    								Drop/Create table: filter_history_ShowLog</string>
   		    										
   		<string name="dlg_actvmain_ops_create_table_filter_history">
   		    							Create table: filter_history</string>
   		    							
   		<string name="dlg_actvmain_ops_Drop_Create_table_Upload_History">
   		    							Drop/Create table: upload_history</string>
   		    							
   		<string name="dlg_actvmain_ops_Drop_Create_table_Upload_History_Audio">
   		    							Drop/Create table: upload_history_audio</string>
   		    							
   		<string name="dlg_actvmain_ops_Drop_Create_table_Audio_Files">
   		    							Drop/Create table: audio_files</string>
   		    							
   		<string name="dlg_actvmain_ops_Drop_Create_table_FilterHistory_AudioMemo">
   		    							Drop/Create table: filter history: audio memo</string>
   		    							
   		<string name="dlg_actvmain_ops_Drop_Create_table_BM">
   		    							Drop/Create table: bm</string>
   		    							
   		<string name="dlg_actvmain_ops_upload_db">
   		    							Upload DB</string>

   		<string name="dlg_actvmain_ops_Upload_Audio">
   		    							Upload Audio</string>

   		<string name="dlg_actvmain_ops_sql_add_col_used">
   		    							Add column: used</string>
   		
   		<string name="dlg_db_ops_item_drop_create_tbl_admin">
   		    							Drop/Create table: admin</string>
   		
   		<string name="dlg_actvmain_ops_Add_File_Name">
   		    							Add file name: "audio_files"</string>
   		
   		<string name="dlg_actvmain_ops_Add_Audio_Length">
   		    							Add audio length</string>
   		
   	<!-- pref: MainActv -->
	   	<string name="prefs_sound_effect_titile">
	   		    							Sound effect</string>
	   	<string name="prefs_sound_effect_key">
	   		    							prefs_sound_effect_key</string>
	   	<string name="prefs_sound_effect_summary">
	   		    							Use sound effect</string>
	   		    							
	   	<string name="prefs_MemoList_Size_titile">
	   		    							Memo list size</string>
	   	<string name="prefs_MemoList_Size_key">
	   		    							prefs_MemoList_Size_key</string>
	   	<string name="prefs_MemoList_Size_summary">
	   		    							Current = </string>
	   		    							
	   	<string name="prefs_ClearView_WhenSaved_titile">
	   		    							Clear view</string>
	   		    							
	   	<string name="prefs_ClearView_WhenSaved_key">
	   		    							prefs_ClearView_WhenSaved_key</string>
	   	<string name="prefs_ClearView_WhenSaved_summary">
	   		    							When memo is saved</string>
	   		    							
	   	<string name="prefs_Test_Mode_titile">
	   		    							Test mode</string>
	   		    							
	   	<string name="prefs_Test_Mode_key">
	   		    							prefs_Test_Mode_key</string>
	   	<string name="prefs_Test_Mode_summary">
	   		    							Test mode on</string>
	   		    							
	   	<string name="prefs_MemoList_Size_ListPref_key">
	   		    							prefs_MemoList_Size_ListPref_key</string>
	   	
	   	<string name="prefs_db_auto_backup_key">
    	    									prefs_db_auto_backup_key</string>
    	<string name="prefs_db_auto_backup_summary">
    	    									Every 0 days</string>
    	<string name="prefs_db_auto_backup_title">
    	    									DB auto backup</string>

	   	<string name="prefs_db_auto_upload_schedule_span_key">
    	    									pkey_AutoUpload_ScheduleSpan</string>
    	<string name="prefs_db_auto_upload_schedule_span_summary">
    	    									Every 0 days</string>
    	<string name="prefs_db_auto_upload_schedule_span_title">
    	    									DB auto upload schedule</string>

	   	<string name="prefs_Audio_Upload_Since_key">
    	    									prefs_Audio_Upload_Since</string>
    	<string name="prefs_Audio_Upload_Since_summary">
    	    									Files since</string>
    	<string name="prefs_Audio_Upload_Since_title">
    	    									Audio upload since</string>

 		<string name="prefs_AudioFiles_From_RecorderApp_List_Auto_Update_title">
							File list => auto-update</string>

 		<string name="prefs_AudioFiles_From_RecorderApp_List_Auto_Update_key">
							prefs_AudioFiles_From_RecorderApp_List_Auto_Update</string>

 		<string name="prefs_AudioFiles_From_RecorderApp_List_Auto_Update_summary">
							ImportActv</string>

    <!-- image_actv_menu.xml -->
	    <string name="image_actv_menu_add_memo">Memo</string>
	    <string name="image_actv_menu_add_patterns">定型句登録</string>
	    <string name="actv_image_menu_add_photo_memo">Photo memo</string>

	<!--  -->
	    <string name="actv_play_bt_add_bm">Add BM</string>
   		<string name="actv_play_bt_see_bm">See BMs</string>
   		<string name="actv_play_tv_bm_label">Bookmark</string>
	    			   	
</resources>
