<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen 
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    
    <CheckBoxPreference
        android:title="@string/prefs_sound_effect_titile"
        android:key="@string/prefs_sound_effect_key"
        android:summary="@string/prefs_sound_effect_summary"
        android:defaultValue="false"
        
        />

	<EditTextPreference
        android:title="@string/prefs_MemoList_Size_titile"
        android:key="@string/prefs_MemoList_Size_key"
        android:summary="@string/prefs_MemoList_Size_summary"
        
    	>
        
    </EditTextPreference>
    
<!-- 	<ta2.items.SeekBarPreference
	    android:key="calligraphy_diameter"
        android:title="@string/prefs_MemoList_Size_titile"
        android:summary="@string/prefs_MemoList_Size_summary"
        android:defaultValue="50"
        />
 -->
 	
<!-- 	<ta2.items.Pref_Dropdown
	    android:key="calligraphy_diameter"
        android:title="@string/prefs_MemoList_Size_titile"
        android:summary="@string/prefs_MemoList_Size_summary"
        android:defaultValue="50"
        />
 -->
 
	<CheckBoxPreference
        android:title="@string/prefs_ClearView_WhenSaved_titile"
        android:key="@string/prefs_ClearView_WhenSaved_key"
        android:summary="@string/prefs_ClearView_WhenSaved_summary"
        android:defaultValue="false"
        
        />
	
	<EditTextPreference
        android:title="@string/prefs_db_auto_backup_title"
        android:key="@string/prefs_db_auto_backup_key"
        android:summary="@string/prefs_db_auto_backup_summary"
        android:defaultValue="0"
        
    >
        
    </EditTextPreference>

	<EditTextPreference
        android:title="@string/prefs_db_auto_upload_schedule_span_title"
        android:key="@string/prefs_db_auto_upload_schedule_span_key"
        android:summary="@string/prefs_db_auto_upload_schedule_span_summary"
        android:defaultValue="0"
        
    >
	
	</EditTextPreference>	
	
	<EditTextPreference
        android:title="@string/prefs_Audio_Upload_Since_title"
        android:key="@string/prefs_Audio_Upload_Since_key"
        android:summary="@string/prefs_Audio_Upload_Since_summary"
        android:defaultValue="0"
        
    >
        
    </EditTextPreference>
	
	
	<!-- REF http://mobile.dzone.com/news/android-development-%E2%80%93 -->
<!-- <ListPreference
	    android:title="Size of memo list"
	    android:key="@string/prefs_MemoList_Size_ListPref_key"
		android:entries="@array/memo_list_size"
		android:entryValues="@array/memo_list_size"
		android:layout="@layout/dlg_tmpl_cancel_lv"
		android:dialogTitle="Choose an option please">
	</ListPreference>
	 -->
	 
</PreferenceScreen>